# fit-converter

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_CONVENTION.md  README.md  app.py  config.example.toml  fit_to_csv.py  pyproject.toml  requirements-dev.txt  requirements.txt  watcher.py
.github/workflows/: ci.yml
docs/: production_deploy.md
fit_converter/: __init__.py  app.py  config_load.py  logging_setup.py  paths.py  watcher.py
inbox/: .gitkeep  1738094871-GIR.fit
logs/: .gitkeep
outbox/: .gitkeep
scripts/: verify-install.sh
src/fit_converter/: __init__.py  app.py  cfg.py  converter.py  doctor.py  logging_setup.py  paths.py  watcher.py
src/fit_converter/templates/: base.html  upload.html
tests/: conftest.py  test_app_bootstrap_logging.py  test_app_upload.py  test_cfg.py  test_converter_transform.py  test_logging.py  test_logging_shape.py  test_rotation.py  test_smoke.py  test_watcher.py  test_watcher_bootstrap_logging.py
