[project]
name = "fit-converter"
version = "0.7.0"
description = "Convert Garmin FIT files to CSV via CLI, web UI, and watcher."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Paul Eves" }]
keywords = ["garmin", "fit", "csv", "converter", "flask", "watchdog"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fitparse>=1.2.0",
    "Flask>=3.1.2",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "isort>=5.12.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/pauleves/fit-converter"
Issues = "https://github.com/pauleves/fit-converter/issues"

[project.scripts]
fit-converter = "fit_converter.app:main"
fit-converter-watcher = "fit_converter.watcher:main"
fit-converter-doctor = "fit_converter.doctor:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["fit_converter*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"fit_converter" = ["templates/**/*", "static/**/*"]

# ---- Dev tooling (synced to Python 3.14) ----
[tool.black]
line-length = 88
# target-version = ["py314"]
skip-string-normalization = true

[tool.isort]
profile = "black"
known_first_party = ["fit_converter"]
line_length = 88
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
# target-version = "py314"
line-length = 88
fix = true
src = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
